fixing poster elements alignment

--- a/src/styleSheets/Poster.css
+++ b/src/styleSheets/Poster.css
@@ -138,17 +138,17 @@
 
 .contacts {
     font-family: 'Acumin Pro', sans-serif;
-    font-weight: lighter;
-    /*display : flex;*/
-    /*flex-direction: row;*/
+    font-weight: 500;
     text-align: center;
     justify-content: center;
-    font-size: 16px;
+    font-size: 18px;
     margin-bottom: 0px;
 }
 
 .contact {
     display: flex;
+    font-weight: 600;
+    font-size: 1.5rem;
     flex-direction: row;
     text-align: center;
     justify-content: center;
@@ -170,7 +170,7 @@
 }
 
 .divider {
-    background: grey;
+    background:  #007acc;
     margin-left: 30px;
     border-radius: 10px;
     height: 3px;
